--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,6 +1,6 @@
 .profilePageWrapper{
     box-sizing: border-box;
-    background-color: rgb(30, 30, 30);
+    background-color: rgb(24, 24, 24);
     width: 100%;
     
     display: grid;
@@ -30,10 +30,10 @@
 .backgroundPictureProfile{
     padding: 20px;
     width: 100%;
-    height: 100%;
+    height: 38vh;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)),url('../images/bg-stage-2.png');
+    background-image: linear-gradient(to bottom, #18181836, #181818),url('../images/profileBg.jpg');
     background-position: center;
     background-size: cover;
 }
@@ -42,6 +42,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 .profileName{
     justify-self: center;
@@ -137,11 +139,20 @@
 .settingsContentWrapper>h2{
     padding: 10px 0px;
 }
-.chosenAward{
-    text-shadow: 0 0 10px rgba(255, 165, 0, 0.5);
+.chosenAward {
+    position: relative;
     color: var(--color-orange);
-    box-shadow: 0px 5px 5px 0 rgba(255, 165, 0, 0.5);
-    border-bottom: 3px solid var(--color-orange);
+}
+
+.chosenAward::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3px; /* Adjust the thickness of the bottom border */
+    background-color: var(--color-orange);
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.5); /* Adjust the glow effect */
 }
 .betContainer{
     border-bottom: 2px solid rgb(43, 43, 43);
@@ -176,7 +187,7 @@
 }
 .logoutButton {
     background-color: rgb(24, 24, 24);
-    border-radius: 7px;
+    border-radius: 5px;
     padding: 10px 20px;
     align-self: flex-end;
 }
@@ -214,7 +225,7 @@
         align-self: flex-end;
         margin: 0 15px;  /* Remove margin (spacing) on the bottom */
         padding-bottom: 0;
-        font-size: 42px;
+        font-size: 50px;
     }
 }
 @media only screen and (min-width: 600px) and (orientation: portrait){
@@ -237,7 +248,7 @@
         background-color: rgb(43, 43, 43);
     }
     .settingsButtonsContainer{
-        width: 70%;
+        width: 80%;
     }
     .settingsContainer{
         width: 70%;
