--- a/CSS/login.css
+++ b/CSS/login.css
@@ -56,7 +56,7 @@
 @media only screen and (min-width: 600px) {
   .goldenbet {
     display: block;
-    padding: 50px 0 0 50px;
+    margin: 40px 0 0 40px;
   }
 
   .login-bg {
@@ -92,8 +92,9 @@
 
   .goldenbet {
     position: absolute;
-    top: 8%;
-    left: 10%;
+    top: 12%;
+    font-size: 40px;
+    margin: 0;
   }
 
   .login-welcome {
