--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -1,17 +1,15 @@
 /* mobile portrait */
 .welcome-container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    padding: 20px;
+    padding: 30px;
 }
 
 .goldenbet {
   display: none;
+  padding: 100px 0 0 100px;
+  margin: 0;
 }
 
-.blurred-background {
+.blurred-background-welcome {
     position: absolute;
     top: 0;
     left: 0;
@@ -26,39 +24,31 @@
     transform: scale(1.1);
 }
 
-.welcome-text {
-    z-index: 1;
-    padding: 20px;
-}
-
-.web-title {
-    height: 20vh;
-}
-
 .welcome-content {
-    height: 40vh;
+    height: 55vh;
     display: flex;
+    text-align: center;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    gap: 20px;
 }
 
 .welcome-content p {
-    text-align: center;
+    color: #9E9E9E;
+    padding: 0 20px;
 }
 
 .welcome-buttons {
-    height: 40vh;
+    height: 28vh;
     width: 100%;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     gap: 10px;
-    background-color: rgb(11, 19, 18);
     padding: 20px;
-    margin-bottom: -20px;
 }
 
 .tablet-welcome-buttons {
@@ -67,6 +57,11 @@
 
 /* tablet portrait */
 @media only screen and (min-width: 600px) {
+    .goldenbet {
+        display: block;
+        z-index: 2;
+      }
+
     .web-title {
         display: none;
     }
@@ -82,26 +77,28 @@
         margin: 100px 0;
     }
 
-    .welcome-container {
-        position: inherit;
+    .welcome-content {
+        height: auto;
+        text-align: left;
+        gap: 0;
     }
 
-    .blurred-background {
-        filter: none;
-        transform: none;
+    .welcome-content h1 {
+        font-size: 24px;
     }
 
-    .welcome-text {
-        background-color: var(--color-background);
-        width: 35%;
-        height: 100%;
-        position: absolute;
-        right: 0;
-        top: 0;
-        padding: 30px;
+    .welcome-content p {
+        padding: 0;
+    }
+
+    .tablet-welcome-buttons {
+        margin: inherit;
     }
 }
 
 @media only screen and (min-width: 600px) and (orientation: portrait) {
-
+    .goldenbet {
+        top: 15%;
+        padding: inherit;
+    }
 }
